script/k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /customer
spec:
  selector:
    app: customer
  ports:
    - port: 8080
      protocol: TCP
      name: http
